update ui workflow sample

--- a/01_classify_images_dli.ipynb
+++ b/01_classify_images_dli.ipynb
@@ -73,68 +73,7 @@
     "[Back to top](#Contents)\n",
     "\n",
     "\n",
-    "### Download dataset\n",
-    "Now we are ready to go,  lets get started and download the dataset from github!!!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd /tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2020-04-08 14:10:24--  https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/CIFAR10-images.zip\n",
-      "Resolving github.com (github.com)... 140.82.112.4\n",
-      "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://raw.githubusercontent.com/IBM/wmla-assets/master/WMLA-learning-journey/image-classification-with-WMLA-UI/CIFAR10-images.zip [following]\n",
-      "--2020-04-08 14:10:24--  https://raw.githubusercontent.com/IBM/wmla-assets/master/WMLA-learning-journey/image-classification-with-WMLA-UI/CIFAR10-images.zip\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 199.232.36.133\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|199.232.36.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 81347372 (78M) [application/zip]\n",
-      "Saving to: 'CIFAR10-images.zip'\n",
-      "\n",
-      "100%[======================================>] 81,347,372  93.6MB/s   in 0.8s   \n",
-      "\n",
-      "2020-04-08 14:10:26 (93.6 MB/s) - 'CIFAR10-images.zip' saved [81347372/81347372]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/CIFAR10-images.zip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!unzip CIFAR10-images.zip"
+    "### Identify dataset location\n"
    ]
   },
   {
@@ -153,7 +92,7 @@
     }
    ],
    "source": [
-    "cd CIFAR-10-images/train"
+    "cd /tmp/CIFAR-10-images/train"
    ]
   },
   {
@@ -221,62 +160,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download model"
+    "### Identify model location"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd ../.."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'dli-1.2.3-tensorflow-samples'...\n",
-      "remote: Enumerating objects: 308, done.\u001b[K\n",
-      "remote: Counting objects: 100% (308/308), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (227/227), done.\u001b[K\n",
-      "remote: Total 539 (delta 111), reused 252 (delta 79)\u001b[K\n",
-      "Receiving objects: 100% (539/539), 448.54 KiB | 0 bytes/s, done.\n",
-      "Resolving deltas: 100% (212/212), done.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git clone https://us-south.git.cloud.ibm.com/ibmconductor-deep-learning-impact/dli-1.2.3-tensorflow-samples.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp/dli-1.2.3-tensorflow-samples/tensorflow-1.13.1/cifar10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd dli-1.2.3-tensorflow-samples/tensorflow-1.13.1/cifar10"
    ]
@@ -349,19 +249,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Remove dataset from the file system.   \n",
-    "### Before proceeding to this step please ensure the Import Dataset is in FINISHED state\n",
-    "\n",
-    "!rm -rf /tmp/CIFAR-10-images\n",
-    "!rm /tmp/CIFAR10-images.zip"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -410,18 +297,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Clean up Model \n",
-    "### Before proceeding to this step please ensure the Model Creation is in FINISHED state\n",
-    "\n",
-    "!rm -rf /tmp/dli-1.2.3-tensorflow-samples"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -439,12 +314,11 @@
     "1. When presented with a dialog box, enter following value and click **Start Tuning**\n",
     "\n",
     "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune1.png)\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune2.png)\n",
+    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune5.png)\n",
     "1. Under the **Hyperparameter Tuning** panel, click on the hyperparameter search job \n",
     "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune3.png)\n",
     "1. Navigate from the **Input panel** to the **Progress panel** and **Best panel** to review the optimal set of hyperparameter\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune4.png)\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune5.png)"
+    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune4.png)\n"
    ]
   },
   {
@@ -546,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
