updates for GUI lab

--- a/01_classify_images_dli.ipynb
+++ b/01_classify_images_dli.ipynb
@@ -38,29 +38,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T02:39:57.200278Z",
+     "start_time": "2020-05-26T02:39:57.194320Z"
+    }
+   },
+   "outputs": [],
    "source": [
-    "## Upload this notebook to your environment\n",
+    "# Project settings \n",
+    "def getconfig(cfg_in={}):\n",
+    "    cfg = {}\n",
+    "    cfg[\"training_path\"] = \"/gpfs/home/s4s004/vanstee/2020-05-wmla/CIFAR-10-images/train\"\n",
+    "    cfg[\"testing_path\"]  = \"/gpfs/home/s4s004/vanstee/2020-05-wmla/CIFAR-10-images/test\"   \n",
+    "    cfg[\"model_path\"]    = \"/gpfs/home/s4s004/vanstee/2020-05-wmla/dli-1.2.3-tensorflow-samples/tensorflow-1.13.1/cifar10\"\n",
+    "    \n",
+    "    # overwrite configs if passed\n",
+    "    for (k,v) in cfg_in.items() :\n",
+    "        nprint(\"Overriding Config {}:{} with {}\".format(k,cfg[k],v))\n",
+    "        cfg[k] = v\n",
+    "    return cfg\n",
     "\n",
-    "1.\tOpen a web browser and enter or paste this URL: https://<font color='red'>**IP_address**</font>:8443/platform\n",
-    "2.\tYou should see the login display in Figure 1.\n",
-    "3.\tLogin with your assigned user ID and password. You should then see the display in Figure 2.\n",
-    "4.  Click on Instance Group **b0p0xx-spark231**\n",
-    "5.  Navigate from the **Overview panel** to the **Notebooks** panel Tuning panel,  and click on **My Notebooks** then **Jupyter 5.4.0 - Owned by xxxx**, display in Figure 3.\n",
-    "6.  When presented with a dialogue box,  click on **upload** and select this notebook and upload to the cluster,  display in Figure 4.\n",
-    "\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/console.png) \n",
-    "Figure 1. Spectrum Conductor login screen\n",
-    "\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/conductor_dashboard.png) \n",
-    "Figure 2. Spectrum Conductor Instance Group view\n",
-    "\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/launch_notebook.png) \n",
-    "Figure 3. Launch Notebook\n",
-    "\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/upload_notebook.png) \n",
-    "Figure 4. Upload Notebook\n"
+    "cfg = getconfig()\n",
+    "# bs = 16   # uncomment this line if you run out of memory even after clicking Kernel->Restart"
    ]
   },
   {
@@ -68,135 +70,52 @@
    "metadata": {},
    "source": [
     "## Download dataset and model\n",
+    "For this example, we will be using the CIFAR10 dataset and a model that has been implemented for the DLI framework using Tensorflow.  Other models for **object detection** or **nlp** can be found here.\n",
+    "\n",
+    "[DLI Models](https://us-south.git.cloud.ibm.com/ibmconductor-deep-learning-impact/dli-1.2.3-tensorflow-samples/tree/master/tensorflow-1.13.1)\n",
     "\n",
     "<a id='Download-dataset-model'></a>\n",
-    "[Back to top](#Contents)\n",
     "\n",
     "\n",
-    "### Identify dataset location\n"
+    "### Identify dataset location\n",
+    "This data has been downloaded for our class lab, but in general for custom tasks you would need to bring your own dataset.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "ExecuteTime": {
+     "end_time": "2020-05-26T02:30:51.051530Z",
+     "start_time": "2020-05-26T02:30:51.048251Z"
+    }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp/CIFAR-10-images/train\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd /tmp/CIFAR-10-images/train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "training_path = %pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/tmp/CIFAR-10-images/test\n"
-     ]
-    }
-   ],
-   "source": [
-    "cd ../test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testing_path = %pwd"
+    "print ('training_path: ' + cfg[\"training_path\"])\n",
+    "print ('testing_path:' + cfg[\"testing_path\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Copy the Dataset Training and Testing folder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training_path: /tmp/CIFAR-10-images/train\n",
-      "testing_path:/tmp/CIFAR-10-images/test\n"
-     ]
-    }
-   ],
-   "source": [
-    "print ('training_path: ' + training_path)\n",
-    "print ('testing_path:' + testing_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Identify model location"
+    "### Model location\n",
+    "This model has already been downloaded from the DLI Models hyperlink above and unzipped (see below).  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cd ../.."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cd dli-1.2.3-tensorflow-samples/tensorflow-1.13.1/cifar10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model_path: /tmp/dli-1.2.3-tensorflow-samples/tensorflow-1.13.1/cifar10\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T02:25:04.231537Z",
+     "start_time": "2020-05-26T02:25:04.228549Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "model_path = %pwd\n",
-    "print ('model_path: '+ model_path)"
+    "print ('model_path: '+ cfg[\"model_path\"])"
    ]
   },
   {
@@ -210,9 +129,9 @@
     "**Data Scientist could bring in their dataset and transform data set as common output format in Watson ML Accelerator.  In this scenario raw images are converted into TensorflowRecord format.**\n",
     "\n",
     "1. Lets swtich back to the browse:  https://IP_address:8443/platform\n",
-    "2. At the top Left select **Workload** > **Spark** > **Deep Learning**\n",
+    "2. At the top Left select **Workload** > **Deep Learning**\n",
     "3. Select the **Datasets** tab, and click **New**\n",
-    "4. Retrieve dataset trainig_path and dataset testing_path\n",
+    "4. Retrieve dataset training_path and dataset testing_path\n",
     "\n",
     "\n",
     "\n"
@@ -220,21 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training_path: /tmp/CIFAR-10-images/train\n",
-      "testing_path:/tmp/CIFAR-10-images/test\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T02:30:54.765762Z",
+     "start_time": "2020-05-26T02:30:54.762501Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "print ('training_path: ' + training_path)\n",
-    "print ('testing_path:' + testing_path)"
+    "print ('training_path: ' + cfg[\"training_path\"])\n",
+    "print ('testing_path:' + cfg[\"testing_path\"])"
    ]
   },
   {
@@ -245,7 +160,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/ImportDataset.png)"
+    "![](./shared-images/ImportDataset.png)"
    ]
   },
   {
@@ -263,29 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model_path: /tmp/dli-1.2.3-tensorflow-samples/tensorflow-1.13.1/cifar10\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T02:40:11.396858Z",
+     "start_time": "2020-05-26T02:40:11.260769Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "print ('model_path: '+ model_path)"
+    "print ('model_path: '+ cfg[\"model_path\"])\n",
+    "print()\n",
+    "!ls {cfg[\"model_path\"]}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. When presented with a diaglog box,  enter following attributes:\n",
+    "3. When presented with a diaglog box,  enter following attributes and click **Add**:\n",
     "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modelcreation3.png)\n",
     "<br>\n",
-    "4. Select the **Tensorflow-cifar10** and click **Next**.\n",
+    "4. Select the **Tensorflow-cifar10-yourname** and click **Next**.\n",
     "\n",
     "5. When presented with a dialog box, ensure that the Training engine is set to singlenode and that the data set points to the one you just created\n",
     "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modelcreation1.png)\n",
@@ -312,6 +226,7 @@
     "1. Navigate from the **Overview panel** to the **Hyperparameter Tuning** panel\n",
     "1. Click **New**\n",
     "1. When presented with a dialog box, enter following value and click **Start Tuning**\n",
+    "<br> Note : for learning rate vary it from 0.0001 to 0.01\n",
     "\n",
     "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune1.png)\n",
     "![](https://github.com/IBM/wmla-assets/raw/master/WMLA-learning-journey/image-classification-with-WMLA-UI/Shared-images/modeltune5.png)\n",
@@ -420,7 +335,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
