fix hpo notebook for new user directory structure

--- a/02_hpo.ipynb
+++ b/02_hpo.ipynb
@@ -29,8 +29,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:11:35.863409Z",
-     "start_time": "2020-05-29T14:11:35.439838Z"
+     "end_time": "2020-06-24T14:16:18.714967Z",
+     "start_time": "2020-06-24T14:16:08.749913Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:34:31.352416Z",
-     "start_time": "2020-05-29T14:34:31.217093Z"
+     "end_time": "2020-06-24T14:16:23.450290Z",
+     "start_time": "2020-06-24T14:16:23.314204Z"
     }
    },
    "outputs": [],
@@ -90,8 +90,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:12:10.675602Z",
-     "start_time": "2020-05-29T14:12:10.667892Z"
+     "end_time": "2020-06-24T14:17:19.947877Z",
+     "start_time": "2020-06-24T14:17:19.940076Z"
     }
    },
    "outputs": [],
@@ -104,7 +104,7 @@
     "    cfg[\"num_images\"] = {\"train\":200,\"valid\":20,\"test\":20}\n",
     "    # ==== CLASS ENTER User login details below =====\n",
     "    cfg[\"wmla_user\"] = 'b0p036aX'  # <=enter your id here\n",
-    "    cfg[\"wmla_pwd\"] = 'pwb0p06aX'  # <=enter your pwd here\n",
+    "    cfg[\"wmla_pwd\"] = 'pwb0p036aX'  # <=enter your pwd here\n",
     "    # ==== CLASS ENTER User login details above =====\n",
     "    cfg[\"sig_name\"]  = 'b0p036a-dliauto'\n",
     "    cfg[\"code_dir\"] = \"/gpfs/software/wmla-p10a117/dli_data_fs/models/pytorch_hpo\"\n",
@@ -124,8 +124,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:12:14.952471Z",
-     "start_time": "2020-05-29T14:12:14.941641Z"
+     "end_time": "2020-06-24T14:18:09.453839Z",
+     "start_time": "2020-06-24T14:18:09.438365Z"
     }
    },
    "outputs": [],
@@ -135,7 +135,7 @@
     "\n",
     "# Use closures for cfg for now ..\n",
     "def get_tmp_dir() :\n",
-    "    return \"/gpfs/home/s4s004/\"+cfg[\"wmla_user\"]+\"/2020-05-wmla/tmp\"\n",
+    "    return \"./tmp\"\n",
     "\n",
     "def get_tar_file() :\n",
     "    return get_tmp_dir() + \"/\" + cfg[\"wmla_user\"]+\".modelDir.tar\"\n",
@@ -192,8 +192,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:12:20.514534Z",
-     "start_time": "2020-05-29T14:12:20.355413Z"
+     "end_time": "2020-06-24T14:18:16.823951Z",
+     "start_time": "2020-06-24T14:18:16.175850Z"
     }
    },
    "outputs": [],
@@ -232,8 +232,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:12:27.493745Z",
-     "start_time": "2020-05-29T14:12:27.347631Z"
+     "end_time": "2020-06-24T14:18:18.300667Z",
+     "start_time": "2020-06-24T14:18:18.165618Z"
     }
    },
    "outputs": [],
@@ -321,8 +321,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:34:58.312742Z",
-     "start_time": "2020-05-29T14:34:58.309694Z"
+     "end_time": "2020-06-24T14:18:22.445973Z",
+     "start_time": "2020-06-24T14:18:22.443856Z"
     }
    },
    "outputs": [],
@@ -374,8 +374,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:12:54.427934Z",
-     "start_time": "2020-05-29T14:12:54.183339Z"
+     "end_time": "2020-06-24T14:18:25.154453Z",
+     "start_time": "2020-06-24T14:18:25.143965Z"
     }
    },
    "outputs": [],
@@ -416,8 +416,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:13:06.385371Z",
-     "start_time": "2020-05-29T14:13:06.376200Z"
+     "end_time": "2020-06-24T14:18:38.748766Z",
+     "start_time": "2020-06-24T14:18:38.739067Z"
     }
    },
    "outputs": [],
@@ -514,8 +514,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:13:10.295370Z",
-     "start_time": "2020-05-29T14:13:10.171662Z"
+     "end_time": "2020-06-24T14:18:42.093159Z",
+     "start_time": "2020-06-24T14:18:41.939914Z"
     }
    },
    "outputs": [],
@@ -545,8 +545,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T14:24:00.222987Z",
-     "start_time": "2020-05-29T14:13:14.717531Z"
+     "end_time": "2020-06-24T14:20:10.795460Z",
+     "start_time": "2020-06-24T14:18:46.846371Z"
     }
    },
    "outputs": [],
@@ -634,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
