final update for hpo example

--- a/02_hpo.ipynb
+++ b/02_hpo.ipynb
@@ -29,8 +29,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-24T17:34:08.415188Z",
-     "start_time": "2020-06-24T17:34:07.805694Z"
+     "end_time": "2020-06-24T18:09:12.788334Z",
+     "start_time": "2020-06-24T18:09:12.269121Z"
     }
    },
    "outputs": [],
@@ -75,8 +75,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-24T17:34:09.692928Z",
-     "start_time": "2020-06-24T17:34:09.557782Z"
+     "end_time": "2020-06-24T18:09:13.694206Z",
+     "start_time": "2020-06-24T18:09:13.558602Z"
     }
    },
    "outputs": [],
@@ -90,8 +90,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-24T17:34:10.230685Z",
-     "start_time": "2020-06-24T17:34:10.221717Z"
+     "end_time": "2020-06-24T18:09:13.935996Z",
+     "start_time": "2020-06-24T18:09:13.927081Z"
     }
    },
    "outputs": [],
@@ -124,8 +124,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-24T17:34:10.740969Z",
-     "start_time": "2020-06-24T17:34:10.727830Z"
+     "end_time": "2020-06-24T18:09:14.571412Z",
+     "start_time": "2020-06-24T18:09:14.557100Z"
     }
    },
    "outputs": [],
@@ -192,8 +192,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-24T17:34:17.446549Z",
-     "start_time": "2020-06-24T17:34:16.972075Z"
+     "end_time": "2020-06-24T18:09:20.216089Z",
+     "start_time": "2020-06-24T18:09:20.175200Z"
     }
    },
    "outputs": [],
@@ -239,14 +239,60 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-24T17:34:18.695078Z",
-     "start_time": "2020-06-24T17:34:18.559368Z"
+     "end_time": "2020-06-24T18:09:08.288198Z",
+     "start_time": "2020-06-24T18:09:08.126830Z"
     }
    },
    "outputs": [],
    "source": [
     "print(\"Code directory : {}\".format(cfg[\"code_dir\"]))\n",
     "!ls {cfg[\"code_dir\"]}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run mnist using command line interface\n",
+    "In the following cells we will be running an deep learning training job for Mnist dataset.  Typically you will develop your initial model and submit single jobs until you are happy with the result before you submit many many jobs.  Since our mnist program is written in python, lets submit if via the command line using the sample below.  \n",
+    "\n",
+    "1.  open a terminal in our juypter noteboook and go to code_samples directory\n",
+    "```\n",
+    "cd code_samples\n",
+    "```\n",
+    "\n",
+    "2. now source our conda environment manually\n",
+    "```\n",
+    "source /gpfs/software/wmla-p10a117/wmla_anaconda/b0p036a/anaconda/envs/powerai162/etc/profile.d/conda.sh\n",
+    "```\n",
+    "3 . export some required environment variables\n",
+    "```\n",
+    "export DLI_DATA_FS=/gpfs/software/wmla-p10a117/dli_data_fs/\n",
+    "export RESULT_DIR=./code_samples/\n",
+    "export EGO_TOP=/gpfs/software/wmla-p10a117/wmla\n",
+    "```\n",
+    "\n",
+    "4. authenticate to WMLA\n",
+    "```\n",
+    "python $EGO_TOP/dli/1.2.3/dlpd/bin/dlicmd.py  --logon  --master-host p10a117.pbm.ihost.com --username b0p036aX --password pwb0p036aX\n",
+    "```\n",
+    "\n",
+    "5.  Submit a single Job\n",
+    "\n",
+    "```\n",
+    "python $EGO_TOP/dli/1.2.3/dlpd/bin/dlicmd.py --exec-start PyTorch --cs-datastore-meta type=fs \\\n",
+    "    --python-version 3.6  --master-host p10a117.pbm.ihost.com --ig b0p036a-dliauto \\\n",
+    "    --gpuPerWorker 1 --model-main pytorch_mnist_HPO.py --model-dir pytorch_hpo \\\n",
+    "    --epochs 2 --debug-level debug\n",
+    "```\n",
+    "   \n",
+    "    \n",
+    "6.  View Job results..\n",
+    "```\n",
+    "JOB_ID=vanstee-1987246869690900-700353922\n",
+    "python  $EGO_TOP/dli/1.2.3/dlpd/bin/dlicmd.py  --exec-errlogs   $JOB_ID --master-host p10a117.pbm.ihost.com  | grep -v \" INFO \" | grep -v \"^+\" | grep -v \"^Spark\" | more\n",
+    "```"
    ]
   },
   {
@@ -320,7 +366,7 @@
     "]\n",
     "```\n",
     "\n",
-    "**We have added this to the pytorch_mnist_HPO.py file already for you!**"
+    "**We have added this to the pytorch_mnist_HPO.py file already for you in the ./code_samples/pytorch_hpo directory!**"
    ]
   },
   {
@@ -328,13 +374,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-24T17:34:26.212042Z",
-     "start_time": "2020-06-24T17:34:26.209697Z"
+     "end_time": "2020-06-24T18:34:39.655395Z",
+     "start_time": "2020-06-24T18:34:39.520497Z"
     }
    },
    "outputs": [],
    "source": [
-    "# !grep -A1 -B2 val_dict {cfg[\"code_dir\"]}/pytorch_mnist_HPO.py"
+    "print(cfg[\"code_dir\"])\n",
+    "!ls {cfg[\"code_dir\"]}"
    ]
   },
   {
