first working rev of nbdev addition for HPO

--- a/05-wmla-api-submitting-hyperparameter-optimization.ipynb
+++ b/05-wmla-api-submitting-hyperparameter-optimization.ipynb
@@ -54,7 +54,9 @@
    "metadata": {},
    "source": [
     "<a id = \"setup\"></a>\n",
-    "## Step 1: Setup"
+    "## Step 1: Setup\n",
+    "\n",
+    "TODO : suggest we delete this, and ask user to open other notebook with Pytorch code .... "
    ]
   },
   {
@@ -66,28 +68,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-21T01:57:32.130224Z",
+     "start_time": "2020-07-21T01:57:31.689294Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-07-10 03:57:30--  https://github.com/IBM/wmla-learning-path/raw/master/datasets/pytorch-mnist-hpo.modelDir.tar\n",
-      "Resolving github.com (github.com)... 140.82.114.4\n",
-      "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+      "--2020-07-20 21:57:31--  https://github.com/IBM/wmla-learning-path/raw/master/datasets/pytorch-mnist-hpo.modelDir.tar\n",
+      "Resolving github.com (github.com)... 140.82.113.3\n",
+      "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://raw.githubusercontent.com/IBM/wmla-learning-path/master/datasets/pytorch-mnist-hpo.modelDir.tar [following]\n",
-      "--2020-07-10 03:57:36--  https://raw.githubusercontent.com/IBM/wmla-learning-path/master/datasets/pytorch-mnist-hpo.modelDir.tar\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.192.133, 151.101.128.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+      "--2020-07-20 21:57:31--  https://raw.githubusercontent.com/IBM/wmla-learning-path/master/datasets/pytorch-mnist-hpo.modelDir.tar\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 199.232.36.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|199.232.36.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 2587 (2.5K) [application/octet-stream]\n",
       "Saving to: ‘pytorch-mnist-hpo.modelDir.tar’\n",
       "\n",
       "100%[======================================>] 2,587       --.-K/s   in 0s      \n",
       "\n",
-      "2020-07-10 03:57:36 (48.5 MB/s) - ‘pytorch-mnist-hpo.modelDir.tar’ saved [2587/2587]\n",
+      "2020-07-20 21:57:32 (20.5 MB/s) - ‘pytorch-mnist-hpo.modelDir.tar’ saved [2587/2587]\n",
       "\n"
      ]
     }
@@ -348,6 +355,9 @@
     "<a id = \"train\"></a>\n",
     "## Step 4: Training with the HPO API\n",
     "\n",
+    "TODO : Now we could reference other notebook, or even put this description over there ...\n",
+    "\n",
+    "\n",
     "The WMLA framework requires 2 changes to your code to support the HPO API, and these are:\n",
     "\n",
     "* Inject hyperparameters for the sub-training during search\n",
@@ -423,6 +433,25 @@
     "&nbsp;\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-21T01:56:10.791959Z",
+     "start_time": "2020-07-21T01:56:10.789523Z"
+    }
+   },
+   "source": [
+    "## NBDEV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -991,7 +1020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
