--- a/00_pytorch_mnist_HPO.py.ipynb
+++ b/00_pytorch_mnist_HPO.py.ipynb
@@ -663,10 +663,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-07-21T02:41:34.206Z"
+     "end_time": "2020-07-21T02:42:22.122687Z",
+     "start_time": "2020-07-21T02:41:34.226664Z"
     }
    },
    "outputs": [
@@ -956,7 +957,34 @@
       "Train Epoch: 3 [49920/60000 (83%)]\tLoss: 0.980005\n",
       "Train Epoch: 3 [50560/60000 (84%)]\tLoss: 0.913920\n",
       "Train Epoch: 3 [51200/60000 (85%)]\tLoss: 0.886134\n",
-      "Train Epoch: 3 [51840/60000 (86%)]\tLoss: 1.014949\n"
+      "Train Epoch: 3 [51840/60000 (86%)]\tLoss: 1.014949\n",
+      "Train Epoch: 3 [52480/60000 (87%)]\tLoss: 0.989626\n",
+      "Train Epoch: 3 [53120/60000 (88%)]\tLoss: 1.068554\n",
+      "Train Epoch: 3 [53760/60000 (90%)]\tLoss: 1.052330\n",
+      "Train Epoch: 3 [54400/60000 (91%)]\tLoss: 0.941849\n",
+      "Train Epoch: 3 [55040/60000 (92%)]\tLoss: 1.046386\n",
+      "Train Epoch: 3 [55680/60000 (93%)]\tLoss: 0.988441\n",
+      "Train Epoch: 3 [56320/60000 (94%)]\tLoss: 0.879078\n",
+      "Train Epoch: 3 [56960/60000 (95%)]\tLoss: 1.034546\n",
+      "Train Epoch: 3 [57600/60000 (96%)]\tLoss: 1.002210\n",
+      "Train Epoch: 3 [58240/60000 (97%)]\tLoss: 1.089011\n",
+      "Train Epoch: 3 [58880/60000 (98%)]\tLoss: 1.062353\n",
+      "Train Epoch: 3 [59520/60000 (99%)]\tLoss: 0.935644\n",
+      "\n",
+      "Test set: Average loss: 0.7913, Accuracy: 8426/10000 (84%)\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Args' object has no attribute 'save_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-5d91e1c4de59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mArgs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-48-1b8dbd7536da>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_model\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"mnist_cnn.pt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Args' object has no attribute 'save_model'"
      ]
     }
    ],
