--- a/tutorials-cpd-wmla/05_cpd2.5-wmla-python-client-e2e-flow.ipynb
+++ b/tutorials-cpd-wmla/05_cpd2.5-wmla-python-client-e2e-flow.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "\n",
     "\n",
-    "![options](https://ibm.box.com/shared/static/1x3z81nuns149ss77ixcw0v60v6aym9f.png)\n",
+    "![options](https://github.com/IBM/wmla-learning-path/raw/master/shared-images/CPD-WMLA_3_pythonclient.png)\n",
     "\n",
     "\n",
     "\n",
