--- a/tutorials-cpd-wmla/05_cpd3.0-wmla-python-client-e2e-flow.ipynb
+++ b/tutorials-cpd-wmla/05_cpd3.0-wmla-python-client-e2e-flow.ipynb
@@ -38,7 +38,7 @@
     "&nbsp;\n",
     "\n",
     "\n",
-    "![options](https://ibm.box.com/shared/static/1x3z81nuns149ss77ixcw0v60v6aym9f.png)"
+    "![options](https://github.com/IBM/wmla-learning-path/raw/master/shared-images/CPD-WMLA_3_pythonclient.png)"
    ]
   },
   {
